# genericbot-rs

./: .gitignore  Cargo.toml  README.md  todo.org  upload.sh
migrations/2018-03-31-011031_init_bot/: down.sql  up.sql
migrations/2018-06-21-204519_command_aliases/: down.sql  up.sql
migrations/2018-09-09-174520_add_tea_counter/: down.sql  up.sql
migrations/2018-09-09-174908_more_constraints/: down.sql  up.sql
migrations/2018-09-14-205730_blocked_guilds_channels/: down.sql  up.sql
src/: background_tasks.rs  main.rs  models.rs  myframework.rs  schema.rs
src/commands/: admin.rs  aliases.rs  booru.rs  gimage.rs  markov.rs  misc.rs  mod.rs  prefixes.rs  reminders.rs  tags.rs
src/utils/: macros.rs  markov.rs  mod.rs  pagination.rs
