[package]
name = "genericbot-rs"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]

[dependencies]
dotenv = "0.13.0"
chrono = "0.4.6"
typemap = "0.3.3"
r2d2 = "0.8.3"
base64 = "0.10.0"
regex = "1.1.0"
lazy_static = "1.2.0"
itertools = "0.8.0"
rand = "0.6.4"
procinfo = "0.4.2"
systemstat = "0.1.3"
whirlpool = "0.8.1"
reqwest = "0.9.8"
serde_json = "1.0.36"
lru-cache = "0.1.1"
threadpool = "1.7.1"
log = "0.4.6"
rmp-serde = "0.13.7"
serde = "1.0.85"
failure = "0.1.5"
fern = "0.5.7"

[dependencies.serenity]
# path = "../serenity"
git = "https://github.com/nitros12/serenity"
rev = "aef7f3efb51df2a899eb58e5479c14a4ed28516e"

[dependencies.diesel]
version = "1.3.3"
features = ["postgres", "chrono", "r2d2"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
